logs/data-hacks.log
Listing '.'...
Listing './bin'...
Compiling './bin/bar_chart.py'...
***   File "./bin/bar_chart.py", line 59
    print "Error: no data"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/histogram.py'...
***   File "./bin/histogram.py", line 200
    print "# NumSamples = %d; Min = %0.2f; Max = %0.2f" % (samples, min_v, max_v)
                                                      ^
SyntaxError: invalid syntax

Compiling './bin/ninety_five_percent.py'...
***   File "./bin/ninety_five_percent.py", line 41
    print calc_95(data, count)
                ^
SyntaxError: invalid syntax

Compiling './bin/run_for.py'...
***   File "./bin/run_for.py", line 54
    print usage
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/sample.py'...
***   File "./bin/sample.py", line 59
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/data_hacks-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
